# pyproject.toml
[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yall"
version = "0.9.0"
authors = [
    { name = "Reinhard Caspary", email = "reinhard.caspary@phoenixd.uni-hannover.de"},
]
description = "Python 3 package to calculate the energy levels of lanthanide ions."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    'numpy == 2.4.4',
    'h5py == 3.16.0',
    'platformdirs == 4.9.6',
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["yall"]