# pyproject.toml
[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "YALIP"
version = "0.9.2"
authors = [
    { name = "Reinhard Caspary", email = "reinhard.caspary@phoenixd.uni-hannover.de"},
]
description = "Python 3 package to calculate the energy levels of lanthanide ions."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    'numpy >= 2.4.0',
    'scipy >= 1.17.0',
    'h5py >= 3.16.0',
    'requests >= 2.34.0',
    'platformdirs >= 4.9.0',
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["yalip"]